center align and bg color fixes

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -204,6 +204,7 @@ section.header-section {
   padding: 13px 0px;
 }
 .head-right ul li {
+  cursor: pointer;
   float: left;
   border-right: 1px solid #E3E3E3;
   padding: 0px 25px;
@@ -428,10 +429,11 @@ div.scrollmenu a:last-child.active {
 }
 
 .fixed-top .profile-list ul li.active p, #right-sidebar-menu .profile-list ul li.active p {
+  background: none;
   position: absolute;
   color: #fff;
-  top: 29%;
-  left: 31%;
+  top: 27%;
+  left: 28%;
   font-size: 2.65em;
   font-family: 'condensed-extra-bold';
 }
